--- a/articles/templates/articles/update.html
+++ b/articles/templates/articles/update.html
@@ -112,7 +112,7 @@
   </div>
   <div class="form-group">
     <label for="exampleFormControlTextarea1">Body</label>
-    <input type="text" name="body" class="form-control" id="exampleFormControlTextarea1" value="{{article.body}}">
+     <textarea type="text" name="body" class="form-control" id="exampleFormControlTextarea1" value="{{article.body}}"></textarea>
   </div>
   <div class="form-group">
     <label for="slug">Slug</label>
