--- a/articles/templates/articles/article_create.html
+++ b/articles/templates/articles/article_create.html
@@ -81,6 +81,33 @@
 			box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
 			margin: 0 auto 0 auto;
 		}
+		.loader {
+  display: none;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+
+.loading {
+  border: 2px solid #ccc;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border-top-color: #1ecd97;
+  border-left-color: #1ecd97;
+  animation: spin 1s infinite ease-in;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
 
 
 	</style>
@@ -98,12 +125,17 @@
 	<button class="btn align samebtn"><a  href="{% url 'articles:articles' %}">Articles</a></button>
 	
 <h1  style=" position: relative; margin-top: 0.5%; margin-bottom: 1%; color: white; text-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);"> Create an Article</h1>
+
 <form class="site-form card" action="{% url 'articles:create'%}" method="post" enctype="multipart/form-data">
+	<div class="loader">
+  <div class="loading">
+  </div>
+</div>
 {% csrf_token %}
 
 {{form}} 
 <small> Leave the file for default image </small>
-<input type="submit" value="Create">
+<input onclick="spinner()" type="submit" value="Create">
 
 </form>
 
@@ -132,6 +164,12 @@ var particleCanvas = new ParticleNetwork(canvasDiv, options);
 	function create(){
 		window.location.href="/articles/create";
 	}
+	function spinner() {
+        document.getElementsByClassName("loader")[0].style.display = "block";
+        setTimeout(() => {
+            document.getElementsByClassName("loader")[0].style.display = "none";
+        }, 1000);
+    }
 	</script>
 
 
