--- a/articles/templates/articles/articles_list.html
+++ b/articles/templates/articles/articles_list.html
@@ -73,6 +73,34 @@
 		h3 {
 
 		}
+			.loader {
+  display: none;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+
+.loading {
+  border: 2px solid #ccc;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border-top-color: #1ecd97;
+  border-left-color: #1ecd97;
+  animation: spin 1s infinite ease-in;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 
 	</style>
 
@@ -92,9 +120,12 @@
 		{% for article in articles %}
 		<div class="cardd">
 		<div class="article">
-			
-			<h3><a href="{% url 'articles:detail' slug=article.slug %}">{{article.title}}</a></h3>
 
+			<h3><a  onclick="spinner()" href="{% url 'articles:detail' slug=article.slug %}">{{article.title}}</a></h3>
+			<div class="loader">
+  <div class="loading">
+  </div>
+</div>
 			<h4>{{article.snippet}}</h4>
 			<small class="date"> Created on : {{article.date}}</small>
 			<br>
@@ -127,6 +158,12 @@ var particleCanvas = new ParticleNetwork(canvasDiv, options);
 	function create(){
 		window.location.href="/articles/create";
 	}
+	function spinner() {
+        document.getElementsByClassName("loader")[0].style.display = "block";
+        setTimeout(() => {
+            document.getElementsByClassName("loader")[0].style.display = "none";
+        }, 1000);
+    }
 	</script>
 
 </body>
