--- a/articles/templates/articles/article_detail.html
+++ b/articles/templates/articles/article_detail.html
@@ -149,7 +149,7 @@
 
 	<button class="btn align samebtn"><a  href="{% url 'articles:articles' %}">Articles</a></button>
 	<div class="cardd">
-	<img class="card-img-top" src="{{article.thumb.url}}"/>
+	<img class="card-img-top" src="{{article.thumb}}"/>
 	<div class="article">
 	<ul class="list-group list-group-flush">
 	<li class="list-group-item">
