--- a/articles/templates/articles/article_create.html
+++ b/articles/templates/articles/article_create.html
@@ -81,6 +81,11 @@
 			box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
 			margin: 0 auto 0 auto;
 		}
+		.inn{
+			position: relative;
+			width: 50%;
+			margin: 0 auto 0 auto;
+		}
 		.loader {
   display: none;
   top: 50%;
@@ -126,18 +131,39 @@
 	
 <h1  style=" position: relative; margin-top: 0.5%; margin-bottom: 1%; color: white; text-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);"> Create an Article</h1>
 
-<form class="site-form card" action="{% url 'articles:create'%}" method="post" enctype="multipart/form-data">
-	<div class="loader">
+<div class="inn">
+	<form action="{% url 'articles:create' %}" method="post" enctype="multipart/form-data">
+		{% csrf_token %}
+  <div class="form-group">
+  	<div class="loader">
   <div class="loading">
   </div>
 </div>
-{% csrf_token %}
+    <label for="exampleInputEmail1">Title</label>
+    <input required type="text" class="form-control" name="title" id="exampleInputEmail1" value="{{article.title}}" >
+  </div>
+  <div class="form-group">
+    <label for="exampleFormControlTextarea1">Body</label>
+     <textarea required type="text" name="body" class="form-control" id="exampleFormControlTextarea1" value="{{article.body}}"></textarea>
+  </div>
+  <div class="form-group">
+    <label for="slug">Slug</label>
+    <input required type="text" name="slug" class="form-control" id="exampleInputPassword1" value="{{article.slug}}">
+  </div>
+  <div class="form-group">
+  	<label for="slug">Choose image</label>
+  	<input type="file" class="form-control" id="myfile" name="thumb">
 
-{{form}} 
-<small> Leave the file for default image </small>
-<input onclick="spinner()" type="submit" value="Create">
+
+  </div>
+
+<br>
+  <button onclick="spinner()" type="submit" class="btn btn-primary">Submit</button><hr>
+  <br>
 
 </form>
+
+</div>
 
 
 <script type="text/javascript">
